--- a/client/stack/site.jade
+++ b/client/stack/site.jade
@@ -151,7 +151,7 @@ template(name='sq')
                         |privledges
                     |#{current_sentiment} sent
                     +alpha
-                    +duck
+                    // +duck
                     // a.ui.icon.button(href='/')
                     //     i.large.home.icon
                     // img.get_info.mobile.hidden.shadowed(src=high_resolution_icon_url )
@@ -249,7 +249,6 @@ template(name='s_q_item')
             +doc_emotion_small
                 // .ui.label user_id #{user_id}
             // .ui.divider
-
 
 
 template(name='stack_tag_selector')
