--- a/client/stack/stack.jade
+++ b/client/stack/stack.jade
@@ -11,7 +11,7 @@ template(name='stack')
                 +cloud filter='stack_site'
                 // .spacer
                 unless site_docs.count
-                    +loading
+                    i.big.loading.yin.yang.icon
                 if site_docs.count
                     // +skve k='limit' v=1 l='1'
                     // +skve k='limit' v=10 l='10'
