--- a/parts/post.jade
+++ b/parts/post.jade
@@ -20,8 +20,8 @@ template(name='post_view')
     with current_doc
         .ui.stackable.padded.grid
             .row 
-                .four.wide.column
-                    a.ui.fluid.circular.basic.button(href="/tribe/#{tribe}")
+                .three.wide.column
+                    a.ui.fluid.large.circular.basic.button(href="/tribe/#{tribe}")
                         i.chevron.left.icon
                         |#{tribe}
                     .ui.large.inline.header #{title}
@@ -51,7 +51,7 @@ template(name='post_view')
                     +array_view key='time_tags' direct=true
                     +array_view key='people_tags' direct=true
                     //- +array_view key='location_tags' label='location_tags' direct=true
-                .eight.wide.column
+                .nine.wide.column
                     img.ui.fluid.rounded.image(src="{{c.url image_id }}" class=currentUser.invert_class)
                     // a.ui.header(href="/user/#{target.username}")
                     //     |#{target.username}
