--- a/parts/tribe_view.jade
+++ b/parts/tribe_view.jade
@@ -1,9 +1,9 @@
 template(name='tribe_view')
     unless current_tribe
         .ui.center.aligned.basic.segment
-            i.massive.loading.yin.yang.link.grey.icon.create_tribe
+            i.massive.loading.yin.yang.link.icon.create_tribe
     with current_tribe
-        .ui.stackable.padded.grid
+        .ui.stackable.grid
             .row 
                 .twelve.wide.column
                     a.ui.circular.basic.icon.button(href="/tribes" title='tribes')
@@ -46,11 +46,10 @@ template(name='tribe_view')
 template(name='tribe_posts')
     .ui.stackable.grid    
         .sixteen.wide.column
-            .ui.inline.header posts
             if currentUser
                 .ui.circular.icon.basic.button.create_post
-                    i.plus.green.icon
-            i.grey.tags.icon
+                    i.plus.green.large.icon
+            i.tags.icon
             if selected_tribe_tags
                 // #clear_tags.ui.black.circular.icon.compact.button
                 //     i.remove.icon
@@ -60,8 +59,8 @@ template(name='tribe_posts')
             each all_tags
                 .ui.compact.circular.small.basic.button.select_tag(class=cloud_tag_class) 
                     strong #{this.name}
-            div
-            i.grey.large.marker.icon
+            // div
+            i.large.marker.icon
             if selected_tribe_location_tags
                 // #clear_location_tags.ui.black.circular.icon.compact.button
                 //     i.remove.icon
@@ -71,8 +70,8 @@ template(name='tribe_posts')
             each all_location_tags
                 .ui.compact.circular.small.basic.button.select_location_tag(class=cloud_tag_class) 
                     strong #{this.name}
-            div
-            i.grey.large.clock.icon
+            // div
+            i.large.clock.icon
             if selected_tribe_time_tags
                 // #clear_time_tags.ui.black.circular.icon.compact.button
                 //     i.remove.icon
@@ -82,8 +81,8 @@ template(name='tribe_posts')
             each all_time_tags
                 .ui.compact.circular.small.basic.button.select_time_tag(class=cloud_tag_class) 
                     strong #{this.name}
-            div
-            i.grey.large.users.icon
+            // div
+            i.large.users.icon
             if selected_tribe_people_tags
                 // #clear_people_tags.ui.black.circular.icon.compact.button
                 //     i.remove.icon
@@ -93,12 +92,98 @@ template(name='tribe_posts')
             each all_people_tags
                 .ui.compact.circular.small.basic.button.select_people_tag(class=cloud_tag_class) 
                     strong #{this.name}
+            // div
+            .ui.inline.header #{q_count}
+            if skv_is 'sort_direction' 1
+                .ui.icon.compact.basic.tertiary.button.sort_down
+                    i.caret.down.icon
+            else
+                .ui.icon.compact.basic.tertiary.button.sort_up
+                    i.caret.up.icon
+            // if skv_is 'view_bounties' 1
+            //     .ui.compact.black.button.unview_bounties
+            //         i.hand.holding.heart.icon
+            //         | bounties
+            // else
+            //     .ui.compact.basic.tertiary.button.view_bounties
+            //         i.hand.holding.heart.icon
+            //         | bounties
+            // if skv_is 'view_unanswered' 1
+            //     .ui.compact.black.button.unview_unanswered
+            //         i.checkmark.icon
+            //         | unanswered
+            // else
+            //     .ui.compact.basic.tertiary.button.view_unanswered
+            //         i.question.icon
+            //         | unanswered
+            // i.big.fire.link.icon
+            .ui.compact.basic.small.tertiary.button.limit_1
+                |1
+            .ui.compact.basic.small.tertiary.button.limit_10
+                |10
+            .ui.icon.compact.large.basic.small.tertiary.button.sort_timestamp
+                i.clock.icon
+            .ui.icon.compact.large.basic.small.tertiary.button.set_points
+                i.line.chart.icon
+            // if skv_is 'view_detail' true
+            //     .ui.black.compact.icon.button.toggle_detail
+            //         i.list.large.icon
+            //         // |detail
+            // else
+            //     .ui.compact.basic.large.icon.tertiary.button.toggle_detail
+            //         i.minus.large.icon
+            //         // |simple
+            //     // i.line.chart.icon
+            .ui.icon.compact.large.button.set_grid(class=grid_class) 
+                i.th.icon
+            .ui.icon.compact.large.button.set_list(class=list_class)
+                i.list.icon
+                    
             .scrolling
-                each posts
-                    +tribe_post_card
-                    .ui.divider
+                if skv_is 'tribe_view_layout' 'grid'
+                    .ui.grid 
+                        each posts
+                            +tribe_post_card_small
+                else if skv_is 'tribe_view_layout' 'list'
+                    each posts
+                        +tribe_post_card
+                        .ui.divider
         
         
+template(name='tribe_post_card_small')
+    .four.wide.column
+        // .ui.segment
+        a(href="/post/#{_id}/view") 
+            img.ui.fluid.rounded.superzoom.image(src="{{c.url image_id }}" class=currentUser.invert_class)
+        a.ui.header(href="/post/#{_id}/view") 
+            |#{title}
+        // i.large.tag.icon(title='tags')
+        // each tags
+        //     .ui.basic.small.compact.button.pick(class=tag_selector_class) #{this}
+        // i.large.marker.icon(title='location tags')
+        // each location_tags
+        //     .ui.basic.small.compact.button.pick_location(class=tag_selector_class) #{this}
+        // i.large.clock.icon(title='time tags')
+        // each time_tags
+        //     .ui.basic.small.compact.button.pick_time(class=tag_selector_class) #{this}
+        // i.large.users.icon(title='users tags')
+        // each people_tags
+        //     .ui.basic.small.compact.button.pick_person(class=tag_selector_class) #{this}
+    
+        // | !{body}
+        // if is_admin
+        //     +remove_button
+        //     +print_this
+        
+        // //- div
+        // +author_info
+        // +creation_info
+        // | #{_views} views
+        // each _viewer_usernames
+        //     .ui.label #{this}
+        // +voting_full
+    
+    
 template(name='tribe_post_card')
     // .ui.segment
     a(href="/post/#{_id}/view") 
