--- a/parts/profile/user_credit.jade
+++ b/parts/profile/user_credit.jade
@@ -1,49 +1,9 @@
 template(name='user_credit')  
-    .ui.header.recalc_user_credit
+    .ui.inline.header.recalc_user_credit
         i.dollar.green.large.icon
         |fiat credit
-    .ui.header total topup amount #{current_user.total_topup_amount}
-    .ui.header total topup count #{current_user.topup_count}
-    .ui.padded.stackable.two.column.grid
-        .column
-            .scrolling
-                each received_dollar_debits
-                    .ui.segment
-                        if recipient.profile_image_id
-                            img.ui.avatar.image(src="{{c.url recipient.profile_image_id height=200 width=200 gravity='face' crop='fill'}}")
-                        .ui.header $#{dollar_amount}
-                        |to
-                        a(href="/user/#{recipient.username}")
-                            |#{recipient.username}
-                        .content
-                            a(href="/m/dollar_debit/#{_id}/view")
-                                |#{when} 
-                            .description
-                                |#{description}
-                                each tags
-                                    .ui.mini.basic.label #{this}
-                            if is_admin
-                                +remove_button
-        .column
-            .scrolling
-                each sent_dollar_debits
-                    .ui.segment
-                        if recipient.profile_image_id
-                            img.ui.avatar.image(src="{{c.url recipient.profile_image_id height=200 width=200 gravity='face' crop='fill'}}")
-                        strong $#{dollar_amount}
-                        |to
-                        a(href="/user/#{recipient.username}")
-                            |#{recipient.username}
-                        .content
-                            a(href="/m/dollar_debit/#{_id}/view")
-                                |#{when} 
-                            .description
-                                |#{description}
-                                each tags
-                                    .ui.mini.basic.label #{this}
-                            if is_admin
-                                +remove_button
-                                
+    // .ui.header total topup amount #{current_user.total_topup_amount}
+    // .ui.header total topup count 
     .ui.stackable.grid      
         //- .centered.row
         //-     .sixteen.wide.column
@@ -53,15 +13,16 @@ template(name='user_credit')
                 .ui.segment
                     .ui.header 
                         +icolor name='refund-2--v1'
+                        |#{current_user.topup_count}
                         |topups
                     .ui.bulleted.list.medscroll
                         each user_topups
                             .item 
                                 .content
-                                    .header $#{amount}
-                                    .description
-                                        |#{transaction_type}
-                                        |#{when}
+                                    strong $#{amount}
+                                    // .description
+                                    |#{transaction_type}
+                                    |#{when}
                                     if is_dev
                                         +print_this
             .column
