hide sidebars, combine user_profile widgets

--- a/client/nav.jade
+++ b/client/nav.jade
@@ -1,8 +1,7 @@
 template(name='nav')
     .ui.fluid.attached.borderless.inverted.menu.topnav.hscroll
-        a.icon.item.toggle_leftbar
-            i.large.bars.icon
-
+        // a.icon.item.toggle_leftbar
+        //     i.large.bars.icon
         if connected
             a.icon.zoomer.item.clear_tags.goto_dao(href='/' class="{{isActivePath '/'}}" title='search')
                 if skv_is 'loading' true
@@ -36,25 +35,27 @@ template(name='nav')
             i.yin.yang.loading.big.icon
             +status    
         .right.menu
-            if currentUser
-                a.icon.item.add(title='add post') 
-                    i.plus.large.icon
-                if unread_count
-                    a.item.alerts.select_term(href="#" class=alert_toggle_class)
-                        i.large.bell.icon
-                        if unread_count
-                            |#{unread_count}
-                else
-                    a.icon.item(href="/inbox" class="{{isActiveRoute 'inbox'}}")
-                        i.large.outline.bell.icon
-                a.icon.item(href="/chat" title='chat') 
-                    i.chat.outline.large.icon
-            // a.icon.item(href="/user/#{currentUser.username}/messages" class="{{isActivePath 'user_messages'}}" title="#{user.username} messages")
+            // if currentUser
+            //     a.icon.item.add(title='add post') 
+            //         i.plus.large.icon
+            //     if unread_count
+            //         a.item.alerts.select_term(href="#" class=alert_toggle_class)
+            //             i.large.bell.icon
+            //             if unread_count
+            //                 |#{unread_count}
+            //     else
+            //         a.icon.item(href="/inbox" class="{{isActiveRoute 'inbox'}}")
+            //             i.large.outline.bell.icon
+            //     a.icon.item(href="/chat" title='chat') 
+            //         i.chat.outline.large.icon
+            // // a.icon.item(href="/user/#{currentUser.username}/messages" class="{{isActivePath 'user_messages'}}" title="#{user.username} messages")
             if is_dev 
                 .icon.item
                     i.large.code.icon
             if currentUser
                 // a.large.item.toggle_rightbar(class="{{isActiveRoute 'user_dashboard'}}")
+                a.mobile.hidden.item(href="/user/#{currentUser.username}" class="{{isActiveRoute 'user_credits'}}")
+                    |#{currentUser.points}p
                 a.large.item(href="/user/#{currentUser.username}" class="{{isActiveRoute 'user_dashboard'}}")
                     //- i.large.user.large.icon
                     if currentUser.profile_image_id
@@ -68,8 +69,6 @@ template(name='nav')
                         else
                             i.large.user.large.icon
                     strong.mobile.hidden #{currentUser.name}
-                a.mobile.hidden.item(href="/user/#{currentUser.username}" class="{{isActiveRoute 'user_credits'}}")
-                    |#{currentUser.points}p
             else
                 a.item(href="/register" title='register')
                     // i.large.plus.icon
@@ -79,8 +78,8 @@ template(name='nav')
                     // i.large.chevron.right.icon
                     |login
                     // +icon name='login-rounded-right'
-            a.icon.large.item.toggle_rightbar.select_term
-                i.ellipsis.vertical.large.icon
+            // a.icon.large.item.toggle_rightbar.select_term
+            //     i.ellipsis.vertical.large.icon
  
    
     if session_is 'viewing_alerts'
