--- a/client/home.jade
+++ b/client/home.jade
@@ -2,7 +2,6 @@ template(name='home')
     .ui.stackable.grid
         .row
             .sixteen.wide.center.aligned.column
-                .ui.header home
                 .ui.cards 
                     .ui.card 
                         .content
@@ -16,35 +15,35 @@ template(name='home')
                                 |stack overflow
                     .ui.card 
                         .content
-                            a.ui.header(href="/stack")
+                            a.ui.header(href="/susers")
                                 i.stack.exchange.icon
-                                |stack overflow
+                                |stack overflow users
                     .ui.card 
                         .content
                             a.ui.header(href="/rusers")
                                 i.users.icon
                                 |reddit users
-                    .ui.card 
-                        .content
-                            .ui.header
-                                i.university.icon
-                                |university
-                    .ui.card 
-                        .content
-                            .ui.header
-                                i.shop.icon
-                                |shop
-                    .ui.card 
-                        .content
-                            .ui.header
-                                i.clock.icon
-                                |rentals
-                    .ui.card 
-                        .content
-                            .ui.header
-                                i.clock.icon
-                                |rentals
-                    +home2
+                    // .ui.card 
+                    //     .content
+                    //         .ui.header
+                    //             i.university.icon
+                    //             |university
+                    // .ui.card 
+                    //     .content
+                    //         .ui.header
+                    //             i.shop.icon
+                    //             |shop
+                    // .ui.card 
+                    //     .content
+                    //         .ui.header
+                    //             i.clock.icon
+                    //             |rentals
+                    // .ui.card 
+                    //     .content
+                    //         .ui.header
+                    //             i.clock.icon
+                    //             |rentals
+                    // +home2
 
 
 template(name='dao')
