fix old delta routes, make profile one page, css button active zoom

--- a/client/client.jade
+++ b/client/client.jade
@@ -59,6 +59,6 @@ template(name='bottom_nav')
             // img.ui.avatar.compact.image(src="{{c.url 'homestar_logo' height=200 width=200 gravity='face' crop='fill'}}")
             i.home.icon
         // if currentUser
-            // a.item.set_member(href="/m/member" class="{{isActiveRoute 'users'}}" title='players')
+            // a.item.set_member(href="/member" class="{{isActiveRoute 'users'}}" title='players')
             //     +icolor name='conference-call' cl='ui mini image'
             //     // i.users.icon
