--- a/client/cloud.jade
+++ b/client/cloud.jade
@@ -149,7 +149,7 @@
 //         .ui.stackable.padded.grid
 //             .four.wide.column
 //                 h1.ui.header Edit #{type}
-//                 a.ui.green.big.icon.button(href="/m/#{type}") 
+//                 a.ui.green.big.icon.button(href="/#{type}") 
 //                     i.large.checkmark.icon
 //                 #delete_model.ui.icon.button
 //                     i.remove.icon
