--- a/client/fields.jade
+++ b/client/fields.jade
@@ -552,7 +552,7 @@ template(name='parent_view')
 
 
 //- template(name='doc_card')
-//-     a.ui.header(href="/m/#{doc.model}/#{doc._id}/view") doc #{doc.model}
+//-     a.ui.header(href="/#{doc.model}/#{doc._id}/view") doc #{doc.model}
 template(name='phone_edit')
     .ui.inline.header 
         i.phone.icon
