--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -191,7 +191,7 @@ template(name='skve')
 
 
 // //- template(name='edit_button')
-// //-     a.ui.basic.button.icon.edit(title='Edit' href="/m/#{model}/#{_id}/edit")
+// //-     a.ui.basic.button.icon.edit(title='Edit' href="/#{model}/#{_id}/edit")
 // //-         i.blue.pencil.icon
 // //-         |Edit
 
