--- a/parts/cloud.jade
+++ b/parts/cloud.jade
@@ -174,7 +174,7 @@ template(name='edit')
         .ui.stackable.padded.grid
             .four.wide.column
                 h1.ui.header Edit #{type}
-                a.ui.green.big.icon.button(href="/m/#{type}") 
+                a.ui.green.big.icon.button(href="/#{type}") 
                     i.large.checkmark.icon
                 #delete_model.ui.icon.button
                     i.remove.icon
